KeyAuth plugins added
