# internal/provider/types/identity_realms.go
@@ -1,0 +1,13 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package types
+
+import (
+	"github.com/hashicorp/terraform-plugin-framework/types"
+)
+
+type IdentityRealms struct {
+	ID     types.String `tfsdk:"id"`
+	Region types.String `tfsdk:"region"`
+	Scope  types.String `tfsdk:"scope"`
+}
