# openapi.yaml
@@ -1081,6 +1081,259 @@ components:
           type: integer
       type: object
       x-speakeasy-entity: KeyAuth
+    KeyAuthEncPlugin:
+      allOf:
+        - $ref: '#/components/schemas/PluginBase'
+        - $ref: '#/components/schemas/KeyAuthEncPluginConfig'
+      x-speakeasy-entity: PluginKeyAuthEnc
+    KeyAuthEncPluginConfig:
+      properties:
+        config:
+          properties:
+            anonymous:
+              description: >-
+                An optional string (consumer UUID or username) value to use as
+                an “anonymous” consumer if authentication fails. If empty
+                (default null), the request will fail with an authentication
+                failure `4xx`. Note that this value must refer to the consumer
+                `id` or `username` attribute, and **not** its `custom_id`.
+              type: string
+            hide_credentials:
+              default: false
+              description: >-
+                An optional boolean value telling the plugin to show or hide the
+                credential from the upstream service. If `true`, the plugin
+                strips the credential from the request (i.e., the header, query
+                string, or request body containing the key) before proxying it.
+              type: boolean
+            key_in_body:
+              default: false
+              description: >-
+                If enabled, the plugin reads the request body (if said request
+                has one and its MIME type is supported) and tries to find the
+                key in it. Supported MIME types:
+                `application/www-form-urlencoded`, `application/json`, and
+                `multipart/form-data`.
+              type: boolean
+            key_in_header:
+              default: true
+              description: >-
+                If enabled (default), the plugin reads the request header and
+                tries to find the key in it.
+              type: boolean
+            key_in_query:
+              default: true
+              description: >-
+                If enabled (default), the plugin reads the query parameter in
+                the request and tries to find the key in it.
+              type: boolean
+            key_names:
+              default:
+                - apikey
+              description: >-
+                Describes an array of parameter names where the plugin will look
+                for a key. The client must send the authentication key in one of
+                those key names, and the plugin will try to read the credential
+                from a header, request body, or query string parameter with the
+                same name.  Key names may only contain [a-z], [A-Z], [0-9], [_]
+                underscore, and [-] hyphen.
+              items:
+                description: A string representing an HTTP header name.
+                type: string
+              type: array
+            realm:
+              description: >-
+                When authentication fails the plugin sends `WWW-Authenticate`
+                header with `realm` attribute value.
+              type: string
+            run_on_preflight:
+              default: true
+              description: >-
+                A boolean value that indicates whether the plugin should run
+                (and try to authenticate) on `OPTIONS` preflight requests. If
+                set to `false`, then `OPTIONS` requests are always allowed.
+              type: boolean
+          type: object
+        name:
+          const: key-auth-enc
+          type: string
+        protocols:
+          default:
+            - grpc
+            - grpcs
+            - http
+            - https
+            - ws
+            - wss
+          description: >-
+            A list of the request protocols that will trigger this plugin. The
+            default value, as well as the possible values allowed on this field,
+            may change depending on the plugin type. For example, plugins that
+            only work in stream mode will only support tcp and tls.
+          format: set
+          items:
+            enum:
+              - grpc
+              - grpcs
+              - http
+              - https
+              - ws
+              - wss
+            type: string
+          type: array
+        route:
+          additionalProperties: false
+          description: >-
+            If set, the plugin will only activate when receiving requests via
+            the specified route. Leave unset for the plugin to activate
+            regardless of the route being used.
+          properties:
+            id:
+              type: string
+          type: object
+        service:
+          additionalProperties: false
+          description: >-
+            If set, the plugin will only activate when receiving requests via
+            one of the routes belonging to the specified Service. Leave unset
+            for the plugin to activate regardless of the Service being matched.
+          properties:
+            id:
+              type: string
+          type: object
+    KeyAuthPlugin:
+      allOf:
+        - $ref: '#/components/schemas/PluginBase'
+        - $ref: '#/components/schemas/KeyAuthPluginConfig'
+      x-speakeasy-entity: PluginKeyAuth
+    KeyAuthPluginConfig:
+      properties:
+        config:
+          properties:
+            anonymous:
+              description: >-
+                An optional string (consumer UUID or username) value to use as
+                an “anonymous” consumer if authentication fails. If empty
+                (default null), the request will fail with an authentication
+                failure `4xx`.
+              type: string
+            hide_credentials:
+              default: false
+              description: >-
+                An optional boolean value telling the plugin to show or hide the
+                credential from the upstream service. If `true`, the plugin
+                strips the credential from the request.
+              type: boolean
+            identity_realms:
+              description: >-
+                A configuration of Konnect Identity Realms that indicate where
+                to source a consumer from.
+              items:
+                properties:
+                  id:
+                    description: >-
+                      A string representing a UUID (universally unique
+                      identifier).
+                    type: string
+                  region:
+                    type: string
+                  scope:
+                    enum:
+                      - cp
+                      - realm
+                    type: string
+                type: object
+              type: array
+            key_in_body:
+              default: false
+              description: >-
+                If enabled, the plugin reads the request body. Supported MIME
+                types: `application/www-form-urlencoded`, `application/json`,
+                and `multipart/form-data`.
+              type: boolean
+            key_in_header:
+              default: true
+              description: >-
+                If enabled (default), the plugin reads the request header and
+                tries to find the key in it.
+              type: boolean
+            key_in_query:
+              default: true
+              description: >-
+                If enabled (default), the plugin reads the query parameter in
+                the request and tries to find the key in it.
+              type: boolean
+            key_names:
+              default:
+                - apikey
+              description: >-
+                Describes an array of parameter names where the plugin will look
+                for a key. The key names may only contain [a-z], [A-Z], [0-9],
+                [_] underscore, and [-] hyphen.
+              items:
+                description: A string representing an HTTP header name.
+                type: string
+              type: array
+            realm:
+              description: >-
+                When authentication fails the plugin sends `WWW-Authenticate`
+                header with `realm` attribute value.
+              type: string
+            run_on_preflight:
+              default: true
+              description: >-
+                A boolean value that indicates whether the plugin should run
+                (and try to authenticate) on `OPTIONS` preflight requests. If
+                set to `false`, then `OPTIONS` requests are always allowed.
+              type: boolean
+          type: object
+        name:
+          const: key-auth
+          type: string
+        protocols:
+          default:
+            - grpc
+            - grpcs
+            - http
+            - https
+            - ws
+            - wss
+          description: >-
+            A list of the request protocols that will trigger this plugin. The
+            default value, as well as the possible values allowed on this field,
+            may change depending on the plugin type. For example, plugins that
+            only work in stream mode will only support tcp and tls.
+          format: set
+          items:
+            enum:
+              - grpc
+              - grpcs
+              - http
+              - https
+              - ws
+              - wss
+            type: string
+          type: array
+        route:
+          additionalProperties: false
+          description: >-
+            If set, the plugin will only activate when receiving requests via
+            the specified route. Leave unset for the plugin to activate
+            regardless of the route being used.
+          properties:
+            id:
+              type: string
+          type: object
+        service:
+          additionalProperties: false
+          description: >-
+            If set, the plugin will only activate when receiving requests via
+            one of the routes belonging to the specified Service. Leave unset
+            for the plugin to activate regardless of the Service being matched.
+          properties:
+            id:
+              type: string
+          type: object
     KeyAuthWithoutParents:
       additionalProperties: false
       example:
@@ -4871,6 +5124,60 @@ paths:
       x-speakeasy-entity-operation:
         terraform-datasource: null
         terraform-resource: PluginBasicAuth#create
+  /{workspace}/plugins#KeyAuth:
+    parameters:
+      - $ref: '#/components/parameters/Workspace'
+    post:
+      description: Create a KeyAuth plugin
+      operationId: create-keyauth-plugin
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/KeyAuthPlugin'
+        required: true
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/KeyAuthPlugin'
+          description: Created KeyAuth plugin
+        '401':
+          $ref: '#/components/responses/HTTP401Error'
+      summary: Create a KeyAuth plugin
+      tags:
+        - Plugins
+      x-speakeasy-entity-operation:
+        terraform-datasource: null
+        terraform-resource: PluginKeyAuth#create
+  /{workspace}/plugins#KeyAuthEnc:
+    parameters:
+      - $ref: '#/components/parameters/Workspace'
+    post:
+      description: Create a KeyAuthEnc plugin
+      operationId: create-keyauthenc-plugin
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/KeyAuthEncPlugin'
+        required: true
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/KeyAuthEncPlugin'
+          description: Created KeyAuthEnc plugin
+        '401':
+          $ref: '#/components/responses/HTTP401Error'
+      summary: Create a KeyAuthEnc plugin
+      tags:
+        - Plugins
+      x-speakeasy-entity-operation:
+        terraform-datasource: null
+        terraform-resource: PluginKeyAuthEnc#create
   /{workspace}/plugins/{PluginId}#BasicAuth:
     delete:
       description: Delete a BasicAuth plugin
@@ -4933,6 +5240,130 @@ paths:
       x-speakeasy-entity-operation:
         terraform-datasource: null
         terraform-resource: PluginBasicAuth#update
+  /{workspace}/plugins/{PluginId}#KeyAuth:
+    delete:
+      description: Delete a KeyAuth plugin
+      operationId: delete-keyauth-plugin
+      responses:
+        '204':
+          description: Successfully deleted Plugin or the resource didn't exist
+        '401':
+          $ref: '#/components/responses/HTTP401Error'
+      summary: Delete a KeyAuth plugin
+      tags:
+        - Plugins
+      x-speakeasy-entity-operation:
+        terraform-datasource: null
+        terraform-resource: PluginKeyAuth#delete
+    get:
+      description: Get a KeyAuth plugin
+      operationId: get-keyauth-plugin
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/KeyAuthPlugin'
+          description: KeyAuth plugin
+        '401':
+          $ref: '#/components/responses/HTTP401Error'
+        '404':
+          description: Resource does not exist
+      summary: Get a KeyAuth plugin
+      tags:
+        - Plugins
+      x-speakeasy-entity-operation:
+        terraform-datasource: null
+        terraform-resource: PluginKeyAuth#read
+    parameters:
+      - $ref: '#/components/parameters/PluginId'
+      - $ref: '#/components/parameters/Workspace'
+    put:
+      description: Update a KeyAuth plugin
+      operationId: update-keyauth-plugin
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/KeyAuthPlugin'
+        required: true
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/KeyAuthPlugin'
+          description: KeyAuth plugin
+        '401':
+          $ref: '#/components/responses/HTTP401Error'
+      summary: Update a KeyAuth plugin
+      tags:
+        - Plugins
+      x-speakeasy-entity-operation:
+        terraform-datasource: null
+        terraform-resource: PluginKeyAuth#update
+  /{workspace}/plugins/{PluginId}#KeyAuthEnc:
+    delete:
+      description: Delete a KeyAuthEnc plugin
+      operationId: delete-keyauthenc-plugin
+      responses:
+        '204':
+          description: Successfully deleted Plugin or the resource didn't exist
+        '401':
+          $ref: '#/components/responses/HTTP401Error'
+      summary: Delete a KeyAuthEnc plugin
+      tags:
+        - Plugins
+      x-speakeasy-entity-operation:
+        terraform-datasource: null
+        terraform-resource: PluginKeyAuthEnc#delete
+    get:
+      description: Get a KeyAuthEnc plugin
+      operationId: get-keyauthenc-plugin
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/KeyAuthEncPlugin'
+          description: KeyAuthEnc plugin
+        '401':
+          $ref: '#/components/responses/HTTP401Error'
+        '404':
+          description: Resource does not exist
+      summary: Get a KeyAuthEnc plugin
+      tags:
+        - Plugins
+      x-speakeasy-entity-operation:
+        terraform-datasource: null
+        terraform-resource: PluginKeyAuthEnc#read
+    parameters:
+      - $ref: '#/components/parameters/PluginId'
+      - $ref: '#/components/parameters/Workspace'
+    put:
+      description: Update a KeyAuthEnc plugin
+      operationId: update-keyauthenc-plugin
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/KeyAuthEncPlugin'
+        required: true
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/KeyAuthEncPlugin'
+          description: KeyAuthEnc plugin
+        '401':
+          $ref: '#/components/responses/HTTP401Error'
+      summary: Update a KeyAuthEnc plugin
+      tags:
+        - Plugins
+      x-speakeasy-entity-operation:
+        terraform-datasource: null
+        terraform-resource: PluginKeyAuthEnc#update
   /{workspace}/routes:
     get:
       description: List all Routes
